--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "next": "13.5.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -25,7 +25,7 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.4.5",
     "typescript": "^5"
   }
 }
