--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-hover-card": "^1.1.7",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.85.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
