--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.487.0",
     "next": "^13.5.4",
     "react": "^18",
