--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.13",
     "@radix-ui/react-hover-card": "^1.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.85.9",
