--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.487.0",
-    "next": "16.0.7",
+    "next": "^16.0.9",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.1.0",
